--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": ".eslintrc.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "open index.html"
+    "start": "open index.html",
+    "lint" : "npx eslint ."
   },
   "keywords": [],
   "author": "",
