--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": ".eslintrc.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "open index.html",
+    "start": "node --watch src/server.js",
     "lint" : "npx eslint ."
   },
   "keywords": [],
