--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": ".eslintrc.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch src/server.js",
-    "lint" : "npx eslint ."
+    "start": "node --watch server.js",
+    "lint": "npx eslint ."
   },
   "keywords": [],
   "author": "",
