--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --watch server.js",
-    "lint": "npx eslint ."
+    "lint": "npx eslint .",
+    "coverage": "npx nyc node --test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.45.0"
+    "eslint": "^8.45.0",
+    "nyc": "^15.1.0",
+    "supertest": "^6.3.3"
   },
   "dependencies": {
     "express": "^4.18.2"
