--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": ".eslintrc.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --watch --test test/",
     "start": "node --watch server.js",
     "lint": "npx eslint .",
     "coverage": "npx nyc node --test"
