fix: pakage.json, test

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": ".eslintrc.js",
   "scripts": {
-    "test": "node --watch --test test/",
-    "start": "node --watch server.js",
+    "test": "node --test",
+    "start": "node server.js",
+    "dev": "node --watch server.js",
     "lint": "npx eslint .",
     "coverage": "npx nyc node --test"
   },
