add: engine version in package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": ".eslintrc.js",
+  "engines": {
+    "node": "^20"
+  },
   "scripts": {
     "test": "node --test",
     "start": "node server.js",
